--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,21 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.datastore:datastore-preferences-rxjava2:1.0.0"
+
+    //DataStore en lugar de SharedPreferences
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    //RxJava2
+    implementation "androidx.datastore:datastore-preferences-rxjava2:1.0.0"
+
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
 
 
 }
