--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.RickYMorty"
         tools:targetApi="31" >
         <activity
-            android:name=".FavoriteCharactersActivity"
+            android:name=".UI.FavoriteCharactersActivity"
             android:exported="false" />
         <activity
-            android:name=".CharacterDetailsActivity"
+            android:name=".UI.CharacterDetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".UI.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
